--- a/notebooks/unit-test.ipynb
+++ b/notebooks/unit-test.ipynb
@@ -1,9 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2bc24ad9",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## short cuts:\n",
+    "    insert A, B\n",
+    "    delete DD\n",
+    "    undo Z\n",
+    "    execute ctrl enter\n",
+    "    toggle line number : maj L\n",
+    "    \n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ec38343",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f71808f2",
+   "id": "eccf6e43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "66f93c34",
+   "execution_count": 35,
+   "id": "7c69feb6",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2f567681",
+   "id": "e71f9276",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "efa4054e",
+   "id": "c989fd7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d215842c",
+   "id": "a079ed34",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9c086af0",
+   "id": "06e8e017",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4fd9e735",
+   "id": "1510bafc",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9b302fd9",
+   "id": "d997234f",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7417644f",
+   "id": "6b3c6407",
    "metadata": {},
    "outputs": [
     {
@@ -178,11 +203,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "371e9e3b",
+   "execution_count": 38,
+   "id": "f0292341",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7"
+   ]
   }
  ],
  "metadata": {
